syntax = "proto3";

package bookPackage;

import "google/protobuf/empty.proto";

service BookService {
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse) {};
    rpc GetBook(google.protobuf.Empty) returns(GetBookResponse) {};
    rpc GetBooks(google.protobuf.Empty) returns (GetBooksResponse) {};
    rpc BorrowBook(BorrowBookRequest) returns (BorrowBookResponse) {}
}

message CreateBookRequest {
    string name = 1;
    string author = 2;
    string publisher = 3;
    string addedBy = 4;
    string description = 5;
}
  
message CreateBookResponse {
    string name = 1;
    string author = 2;
    string publisher = 3;
    string addedBy = 4;
    string description = 5;
    string status = 6;
    string id = 7;
}

message GetBookRequest{

}

message GetBookResponse {
    string name = 1;
    string author = 2;
    string publisher = 3;
    string addedBy = 4;
    optional string description = 5;
    string status = 6;
    string id = 7;
}

message GetBooksRequest{

}

message GetBooksResponse {
    repeated GetBookResponse books = 1;
}

message BorrowBookRequest {
    string borrowedBy = 1;
    string bookId = 2;
    string returnDate = 3;
}
  
message BorrowBookResponse {
    string bookName = 1;
    string returnDate = 2;
    string createdAt = 3;
    string id = 4;
}