// Original file: proto/book.proto


export interface BorrowBookResponse {
  'bookName'?: (string);
  'returnDate'?: (string);
  'createdAt'?: (string);
  'id'?: (string);
}

export interface BorrowBookResponse__Output {
  'bookName'?: (string);
  'returnDate'?: (string);
  'createdAt'?: (string);
  'id'?: (string);
}
