// Original file: proto/book.proto

import type { GetBookResponse as _bookPackage_GetBookResponse, GetBookResponse__Output as _bookPackage_GetBookResponse__Output } from '../bookPackage/GetBookResponse';

export interface GetBooksResponse {
  'books'?: (_bookPackage_GetBookResponse)[];
}

export interface GetBooksResponse__Output {
  'books'?: (_bookPackage_GetBookResponse__Output)[];
}
